traversal.snake.Snake.scala.error
Compilation error:
Snake:12: error: ')' expected but 'else' found.
                  if((isFacingWall())&&(getDirection()==(Direction.EAST)) {left(); forward(); left()} else {right(); forward(); right()}}}
                                                                                                      ^Snake:23: error: ')' expected but '}' found.
while(!test) {if((isFacingWall())&&(getDirection()==(Direction.WEST))} 
                                                                     ^